# deepin-screenshot

./: .clog.toml  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  ChangeLog  Makefile  README  README.md  deepin-screenshot-v3.desktop  deepin-screenshot.desktop  deepin-screenshot.pro  eventcontainer.cpp  eventcontainer.h  eventmonitor.cpp  eventmonitor.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  resources.qrc  screenshot.cpp  screenshot.h  translate_desktop.sh  updateTranslate.sh  update_ts.sh  utils.cpp  utils.h  windowmanager.cpp  windowmanager.h
.tx/: config  ts2desktop
controller/: controller.pri  menucontroller.cpp  menucontroller.h  resource.qrc
dbusinterface/: com.deepin.daemon.SoundEffect.xml  dbuscontrolcenter.cpp  dbuscontrolcenter.h  dbusinterface.pri  dbusnotify.cpp  dbusnotify.h  dbusscreenshot.cpp  dbusscreenshot.h  dbussoundeffect.cpp  dbussoundeffect.h  dbuszone.cpp  dbuszone.h  org.freedesktop.Notifications.xml  qdbusxml2cpp-fix
dbusservice/: com.deepin.DeepinScreenshot.xml  com.deepin.Screenshot.service  com.deepin.Screenshot.xml  com.deepin.dde.DeepinScreenshot.service  dbusscreenshot.h  dbusscreenshotservice.cpp  dbusscreenshotservice.h
debian/: changelog  control  copyright  deepin-screenshot.desktop  docs  generate_mo.mk  install  links  postinst  prerm  rules
debian/source/: include-binaries
doc/en_US/: index.md
doc/zh_CN/: index.md
locale/: af.po  am.po  am_ET.po  ar.po  ar_AA.po  ar_EG.po  ar_SA.po  ar_SY.po  ast.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  de_AT.po  de_DE.po  deepin-screenshot.pot  deepin-screenshot.ts  el.po  el_GR.po  en.po  en_AU.po  en_US.po  eo.po  es.po  es_419.po  es_CL.po  es_ES.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  fa.po  fi.po  fil.po  fr.po  gl.po  gl_ES.po  (+43 more)
po/: en_US.po  ru_RU.po  zh_CN.po  zh_TW.po
skin/01/: config.ini
src/: ArrowCanvas.qml  BigColor.qml  BlurCanvas.qml  BlurShape.qml  ColorButton.qml  ColorRow.qml  ContactModel.qml  EllipseCanvas.qml  FillShape.qml  FontSizeSpinner.qml  IncDecButton.qml  LineCanvas.qml  Main.qml  MosaicCanvas.qml  OSD.qml  RectangleCanvas.qml  SaveButton.qml  SaveQuality.qml  SaveSlider.qml  SaveToolTip.qml  ShapeCanvas.qml  ShortcutsLabel.qml  ShortcutsSection.qml  ShortcutsViewer.qml  TextCanvas.qml  TextRect.qml  ToolButton.qml  action.py  app_context.py  app_controller.py  app_window.py  bus.py  calculateRect.js  config.py  constant.py  constants.py  database.py  dbus_interfaces.py  dbus_services.py  debarcode.py  (+40 more)
src/_share/: config.py  tencent.py  weibo.py
src/accounts/: __init__.py  account_base.py  accounts_manager.py  snspy.py
src/controller/: menucontroller.cpp  menucontroller.h
src/dbusinterface/: com.deepin.daemon.Zone.xml  com.deepin.dde.ControlCenter.xml  dbuscontrolcenter.cpp  dbusnotify.h  dbussoundeffect.h  dbuszone.cpp  dbuszone.h
src/dbusservice/: dbusscreenshot.cpp  dbusscreenshotservice.cpp  dbusscreenshotservice.h
src/share_service/: __init__.py  config.ini  (+4 more)
tools/: create_po.py  generate_mo.py  locale_config.ini  update_po.py  update_pot.py
translations/: deepin-screenshot.ts  deepin-screenshot_af.ts  deepin-screenshot_am_ET.ts  deepin-screenshot_ar.ts  deepin-screenshot_ast.ts  deepin-screenshot_az.ts  deepin-screenshot_bg.ts  deepin-screenshot_bn.ts  deepin-screenshot_ca.ts  deepin-screenshot_cs.ts  deepin-screenshot_da.ts  deepin-screenshot_de.ts  deepin-screenshot_el.ts  deepin-screenshot_en_AU.ts  deepin-screenshot_en_pseudo.ts  deepin-screenshot_eo.ts  deepin-screenshot_es.ts  deepin-screenshot_es_419.ts  deepin-screenshot_fa.ts  deepin-screenshot_fi.ts  deepin-screenshot_fil.ts  deepin-screenshot_fr.ts  deepin-screenshot_gl_ES.ts  deepin-screenshot_he.ts  deepin-screenshot_hi_IN.ts  deepin-screenshot_hr.ts  deepin-screenshot_hu.ts  deepin-screenshot_hy.ts  deepin-screenshot_id.ts  deepin-screenshot_it.ts  deepin-screenshot_ja.ts  deepin-screenshot_ko.ts  deepin-screenshot_ku_IQ.ts  deepin-screenshot_lt.ts  deepin-screenshot_ml.ts  deepin-screenshot_mn.ts  deepin-screenshot_ms.ts  deepin-screenshot_nb.ts  deepin-screenshot_ne.ts  deepin-screenshot_nl.ts  (+18 more)
utils/: baseutils.cpp  baseutils.h  calculaterect.cpp  calculaterect.h  configsettings.cpp  configsettings.h  screenutils.cpp  screenutils.h  shapesutils.cpp  shapesutils.h  shortcut.cpp  shortcut.h  tempfile.cpp  tempfile.h  utils.pri
widgets/: bigcolorbutton.cpp  bigcolorbutton.h  colorbutton.cpp  colorbutton.h  fontsizewidget.cpp  fontsizewidget.h  magnifiertip.cpp  magnifiertip.h  majtoolbar.cpp  majtoolbar.h  resources.qrc  savebutton.cpp  savebutton.h  savetips.cpp  savetips.h  shapesutils.h  shapeswidget.cpp  shapeswidget.h  subtoolbar.cpp  subtoolbar.h  textbutton.cpp  textbutton.h  textedit.cpp  textedit.h  toolbar.cpp  toolbar.h  toolbutton.h  toptips.cpp  toptips.h  widgets.pri  zoomIndicator.cpp  zoomIndicator.h
(+136 files in other folders)
